k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: christman-runner
  labels:
    app: christman-runner
    environment: production
