k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: christman-runner
  namespace: christman-runner
  labels:
    app: christman-runner
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: christman-runner
